gcc-14.2.0/gcc/testsuite/gdc.test/compilable/obsolete_body.d
version https://git-lfs.github.com/spec/v1
oid sha256:1030ed70a63f2b26483e5f901f635fbf3e8f615e104b39be871b3d26483ef721
size 53
